Fri Oct 19 07:56:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Alias_TypeCode.cpp:
        * tao/AnyTypeCode/Alias_TypeCode_Static.cpp:
        * tao/AnyTypeCode/Objref_TypeCode.cpp:
        * tao/AnyTypeCode/Objref_TypeCode_Static.cpp:
        * tao/Any_Insert_Policy_T.h:
          Layout changes

Wed Oct 17 12:31:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ObjRefTemplate/ORT_Adapter_Factory_Impl.h:
          Doxygen change

        * tao/PortableServer/Root_POA.cpp:
          Layout change

Mon Oct 15 13:26:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/AMH_Response_Handler.h:
          Use virtual inheritance

        * tao/PortableServer/Root_POA.h:
          Doxygen fix

Fri Oct 12 10:51:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for x.1.5

Fri Oct 12 11:20:25 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.5 released.

Wed Oct  3 08:25:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OBV/README:
          Layout changes

Tue Sep 18 16:26:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * tao/UB_String_Argument_T.cpp:
          Missed one of the changes with the original
          Wed Jan 13 16:30:00 UTC 2012 change:
          Was also directly calling delete [] on CORBA::strings
          instead of using CORBA::string_free(). As this delete []
          call was also inside a template however, it needed to actualy
          use the S_var::s_traits::release () that mapped this
          to the correct CORBA::string_free() call.

Tue Sep  4 16:02:00 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/fe_utils.cpp(FE_Utils::can_be_redefined):

          Removed unused local variables.

Thu Aug 30 19:27:46 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/included.idl:
        * tests/IDL_Test/including.idl:
